--- a/07Todos_ContextAPI_LocalStorage/package.json
+++ b/07Todos_ContextAPI_LocalStorage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "themechanger-contextapi",
+  "name": "07todos-contextapi-localstorage",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
